# simudata_pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
batchfiles/: CMakeLists.txt  add_dirt.py  add_drone_mask.py  add_flare.py  add_sharpen.py  add_strong_flare.py  cube3_post_fisheye_process.py  cube3_post_fisheye_process_startfly.py  erp_gt_check_cv.py  filter_out_unmatched_images.py  fix_segment_without_foliage.py  generate_evaluation.sh  migrate_filelist.py  panorama_to_erp.py  pkl2webp.py  post_fisheye_process.py  post_sim_process.py  requirments.txt  resize_min_max_bilinear_class.py  run_3pinholes_disparity_from_depth.py  run_add_masks.py  run_fisheye.py  run_fisheye_3cubes.py  run_fisheye_for_calibration.py  run_fisheye_for_perception.py  run_fisheye_isp.py  run_fisheye_isp_by_folder.py  run_fisheye_isp_combo.py  run_fisheye_isp_combo_2x_by_folder.py  run_fisheye_isp_combo_by_folder.py  run_fisheye_isp_with_erp.py  run_fisheye_low_altitude.py  run_fisheye_pipelines.py  run_fisheye_sim_for_analysis.py  run_fisheye_sim_for_training.py  run_new_pipelines.py  run_panorama_disparity_from_depth.py  run_panorama_to_3pinholes.py  run_panorama_to_erp.py  run_paranoma_filelist.py  (+6 more)
samples/fisheye_error_analysis_sample/rotation/: .gitignore  generate_error_maps.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  remap.cpp  remap.h  shader.cpp  shader.h  utils.cpp  utils.h  visualize_depth.py  visualize_seg_graymap.py
src/dirt/: CMakeLists.txt  README.md  arguments.cpp  arguments.h  dirt.fs  egl_hello_world.cpp  main.cpp
src/dirt/textures/less_dirt/: screen_dirt_0.TGA
src/fisheye/: CMakeLists.txt  MANUAL.md  PIPELINE.md  README.md  setup.py
src/fisheye/3pinholes_to_panorama/: 3pinholes_to_panorama.py  CMakeLists.txt  rename.sh  rename_0.05.sh  rename_0.2sh
src/fisheye/add_effects/: CMakeLists.txt  add_blur.py  add_clache.py  add_demosaicing.py  add_isp.py  add_vignette.py  check_img_similarity.py  isp_filters.py
src/fisheye/fisheye/: convert.py  generate_tables.py  rectification.yml  utils.py
src/fisheye/fisheye/core/: remapping_tables.py  table_store.py  types.py  utils.py
src/fisheye/fisheye_to_3pinholes/: 1686075319265_remapped.pfm  CMakeLists.txt  README.md  arguments.cpp  arguments.h  fisheye_to_3pinholes.cpp  fisheye_to_3pinholes.py  generate_fisheye_to_3pinholes_table.py  rectification_new.yml  rectification_old.yml  rectify.cpp  rectify_depth.py
src/fisheye/fisheye_to_erp/: CMakeLists.txt  fisheye_to_erp.py  panorama_to_erp.py
src/fisheye/fisheye_to_panorama/: CMakeLists.txt  fisheye_to_panorama.py
src/fisheye/panorama_to_3pinholes/: CMakeLists.txt  arguments.cpp  arguments.h  generate_panorama_to_3pinholes_table.py  label_color.json  panorama_to_3pinholes.cpp  panorama_to_3pinholes.py
src/fisheye/panorama_to_3pinholes/legacy/: rectify_aug_Benny.py  validate.py
src/fisheye/panorama_to_fisheye/: CMakeLists.txt  arguments.cpp  arguments.h  generate_panorama_to_fisheye_table.py  panorama_to_fisheye.cpp  panorama_to_fisheye.py
src/fisheye/scripts/: CMakeLists.txt  build_filelist_mapping.py  calc_focal_length.py  change_folders.sh  check_filelist_data.py  check_fisheye_mapback.py  check_img_similiarity_after_warp.py  check_pkl_compress.py  check_stereo_feature.py  check_stereo_warp.py  convert.sh  convert_img_format.py  count_files.py  create_point_cloud.py  find_similar_rgb_diff_depth.py  generate_gradient_image.py  generate_point_clouds.sh  generate_point_clouds_from_fisheye.py  generate_point_clouds_from_panorama.py  generate_rpy_noises.sh  mapback_action.py  mapback_filelist.py  match_folders.py  process_remapping_table.py  rename_timestamps.py  run_cube3_post_fisheye.sh  run_fisheye_isp.sh  shuffle_filelist.py  sim_data_folders.py  sim_data_folders2.py  sim_data_folders3.py  sim_image_paths.txt  start_unreal.sh  visualize_point_cloud.py
src/fisheye/scripts/dengyong/: rectify_erp.py
src/fisheye/scripts/history/: build_seg_mapping.py  check_isp_eval.sh  check_isp_stereo.sh  convert_3cubes.sh  (+47 more)
src/fisheye/test/: clean.sh  test.sh
src/flare/: CMakeLists.txt  README.md  arguments.cpp  arguments.h  flare.fs  main.cpp
src/strong_flare/: CMakeLists.txt  README.md  arguments.cpp  arguments.h  main.cpp  strong_flare.fs
(+10 files in other folders)
