install(PROGRAMS
    add_dirt.py
    add_flare.py
    add_strong_flare.py
    cube3_post_fisheye_process_startfly.py
    cube3_post_fisheye_process.py
    filter_out_unmatched_images.py
    migrate_filelist.py
    post_fisheye_process.py
    post_sim_process.py
    run_3pinholes_disparity_from_depth.py
    run_add_masks.py
    run_fisheye_3cubes.py
    run_fisheye_for_calibration.py
    run_fisheye_for_perception.py
    run_fisheye_isp_by_folder.py
    run_fisheye_isp_combo_2x_by_folder.py
    run_fisheye_isp_combo_by_folder.py
    run_fisheye_isp_combo.py
    run_fisheye_isp_with_erp.py
    run_fisheye_isp.py
    run_fisheye_low_altitude.py
    run_fisheye_pipelines.py
    run_fisheye_sim_for_analysis.py
    run_fisheye_sim_for_training.py
    run_fisheye.py
    run_panorama_disparity_from_depth.py
    run_panorama_to_3pinholes.py
    run_panorama_to_erp.py
    run_pinholes_disparity_from_depth.py
    run_seg_gray_from_color.py
    run_sim_to_perception_pickle.py
    update_format.py
DESTINATION bin)
